--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Podomoro</title>
-  <meta name="description" content="Podomoro">
+  <title>Pomodoro</title>
+  <meta name="description" content="Pomodoro">
   <meta name="author" content="victoria-lo">
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/">
@@ -18,7 +18,7 @@
 
 <body>
     <div class="jumbotron">
-        <h1>PODOMORO</h3>
+        <h1>POMODORO</h3>
         <h3>The Productivity Timer</h4>
     </div>
 
